crates/reflect-tui/src/tui_core/bottom_pane/snapshots/reflect_tui__tui_core__bottom_pane__unified_exec_footer__tests__render_more_sessions.snap
---
source: crates/reflect-tui/src/tui_core/bottom_pane/unified_exec_footer.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 1 },
    content: [
        "  1 background terminal running · /ps to view · /s",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
